--- a/views/navbar3.ejs
+++ b/views/navbar3.ejs
@@ -43,7 +43,6 @@
       });   
     });
   </script>
-  <script src="scripts.js"></script>
   <title>NEXT STOP</title>
 </head>
 <body>
@@ -74,7 +73,6 @@
           <% } %>
 
           <!-- ADD NEW -->
-          <% if (user) { %> 
 <!-- Modal -->
   <div class="modal fade" id="myModal">
     <div class="modal-dialog">
@@ -96,18 +94,16 @@
                     <label for="signin-password">Location</label>
                     <input class="full-width has-padding" type="text"  placeholder="Where in the world is it?" name="location">
 
-                    <input type="hidden" name="author" value="<%=user.firstname%> <%=user.lastname%>" class="required">
+<input type="hidden" name="author" value="<%=user.firstname%> <%=user.lastname%>" class="required">
                   </p>
-
                   <p class="fieldset">
-                    <input class="full-width" type="submit" value="Submit">
+                    <input type="submit" class="full-width" value="Submit">
                   </p>
                 </form>
               </div>
       </div>
     </div>
   </div>
-  <% } %>
           <!-- NEW MODAL & FORMS -->
 
           <div class="cd-user-modal"> <!-- this is the entire modal form, including the background -->
@@ -153,12 +149,11 @@
                   <p class="fieldset">
                     <label for="signup-password">Password</label>
                     <input class="full-width has-padding" id="signup-password" type="password"  placeholder="Password" name="password">
-
-
                   </p>
 
+
                   <p class="fieldset">
-                    <input id="submitsignup" class="full-width has-padding" type="submit" value="Create account">
+                    <input id="submitsignup" class="full-width has-padding" type="button" value="Create account">
                   </p>
                 </form>
               </div> <!-- cd-signup -->
@@ -170,50 +165,4 @@
       </div>
     </nav>
   </header>
-
-  <!-- DB CONTENT -->
-  <div id="page-wrap container"> 
-  <% if (user == null) { %>
-<div class="splash"><h2>Log in and see where these places are!</h2></div>
-<% } %>
-<div class="post"><section class="postsection" data-stellar-background-ratio="0.5">
- Instructions: Scroll! Discover places! Click "I want to go" to see where it is! And save to your bucket List!
-</section></div>
-    <% for (var i=posts.length-1; i>=0; i--){ %>
-
-    <!-- <article class="post"> -->
-    <div class="post" >
-      <section class="postsection" id="toppost" style="background-image: url(<%= posts[i].imgurl %>)" data-stellar-background-ratio="0.5">
-        <% if (user) { %> 
-
-        <span class="wanttogo">
-          <div data-id="<%=posts[i].id %>" class="button button-large button-plain button-border" id="want">I WANT TO GO TO <%= posts[i].location %> </div>
-          <!-- <div data-id="<%=posts[i].id %>" class="box bar" id="want">I WANT TO GO TO <%= posts[i].location %> </div> -->
-
-          <h5>by <%= posts[i].author %></h5>
-        </span> <% } %>
-
-        
-        
-        <button data-id="<%=posts[i].id %>" type="button" class="deletebutton">&times;</button><br>
-      </section></div>
-      <!-- </article> -->
-      <% } %>
-    </div>
-
-    <!-- SKROLLR -->
-    <script type="text/javascript">
-      var s = skrollr.init();
-    </script>
-
-    <!-- VALIDATE -->
-
-    <script>
-
-      $('form').validate();
-    </script>
-<script src="/vendor/loginformmain.js"></script>
-</body>
-
-
-</html>
+  </body>
