--- a/views/navbar3.ejs
+++ b/views/navbar3.ejs
@@ -6,7 +6,7 @@
   <!-- FONTS -->
   <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   <!-- LOGIN FORM -->
-  <link rel="stylesheet" type="text/css" href="/vendor/loginformreset.css">
+  <!-- <link rel="stylesheet" type="text/css" href="/vendor/loginformreset.css"> -->
   <link rel="stylesheet" type="text/css" href="/vendor/loginformstyle.css">
 
   <!-- STYLESHEETS -->
@@ -57,7 +57,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">NEXT STOP</a>
+        <a href="/"><img src="/nextstop-bg-01.png" width="100"></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -97,7 +97,7 @@
 <input type="hidden" name="author" value="<%=user.firstname%> <%=user.lastname%>" class="required">
                   </p>
                   <p class="fieldset">
-                    <input type="submit" class="full-width" value="Submit">
+                    <input type="submit" class="full-width" value="SUBMIT">
                   </p>
                 </form>
               </div>
