--- a/views/index.ejs
+++ b/views/index.ejs
@@ -177,10 +177,10 @@
   <!-- DB CONTENT -->
   <div id="page-wrap container"><div class="post"><section class="postsection" data-stellar-background-ratio="0.5"> 
   <% if (user == null) { %>
-<div class="splash"><img src="/globe1-01.png" id="globei" width="200"><hr><h2>Log in and start exploring the world!</h2><hr>
+<div class="splash"><img src="/globe3-01.png" id="globei" width="200"><hr><h2>Log in and start exploring the world!</h2><hr>
 </div>
 <% } else { %>
-<img src="/globe1-01.png" id="globei" width="200"><hr>
+<img src="/globe3-01.png" id="globei" width="200"><hr>
  Instructions: Scroll! Discover places! Click "I want to go" and save it to your bucket list!
 
 <% } %></section></div> 
@@ -192,7 +192,7 @@
         <% if (user) { %> 
 
         <span class="wanttogo">
-          <span data-id="<%=posts[i].id %>" class="button button-large button-plain button-border" id="want">I WANT TO GO TO <%= posts[i].location %> </span><br>posted by <%= posts[i].author %><span hidden id="place"> <%= posts[i].location %></span>
+          <button data-id="<%=posts[i].id %>" class="button button-large button-plain button-border" id="want">I WANT TO GO TO <%= posts[i].location %> </button><br>posted by <%= posts[i].author %><span hidden id="place"> <%= posts[i].location %></span>
           <!-- <div data-id="<%=posts[i].id %>" class="box bar" id="want">I WANT TO GO TO <%= posts[i].location %> </div> -->
 
           
