edited button Heroku deploy

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
   <!-- SKROLLR -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
   <!-- BUTTONS -->
-  <link rel="stylesheet" href="http://unicorn-ui.com/buttons/css/buttons.css">
+  <link rel="stylesheet" href="//unicorn-ui.com/buttons/css/buttons.css">
   <!-- VALIDATION -->
   <script src="http://cdn.jsdelivr.net/jquery.validation/1.14.0/jquery.validate.js"></script>
   <!-- MAPS -->
