removed skrollr, can scroll on phone

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <!-- FONTS -->
   <link href='https://fonts.googleapis.com/css?family=Poppins:600' rel='stylesheet' type='text/css'>
     <!-- LOGIN FORM -->
-  <!-- <link rel="stylesheet" type="text/css" href="/vendor/loginformreset.css"> -->
+  <link rel="stylesheet" type="text/css" href="/vendor/loginformreset.css">
   <link rel="stylesheet" type="text/css" href="/vendor/loginformstyle.css">
 
   <!-- STYLESHEETS -->
@@ -23,7 +23,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <!-- SKROLLR -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script> -->
   <!-- BUTTONS -->
   <link rel="stylesheet" href="/vendor/buttons.css">
   <!-- VALIDATION -->
