--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <!-- FONTS -->
   <link href='https://fonts.googleapis.com/css?family=Poppins:600' rel='stylesheet' type='text/css'>
     <!-- LOGIN FORM -->
-  <link rel="stylesheet" type="text/css" href="/vendor/loginformreset.css">
+  <!-- <link rel="stylesheet" type="text/css" href="/vendor/loginformreset.css"> -->
   <link rel="stylesheet" type="text/css" href="/vendor/loginformstyle.css">
 
   <!-- STYLESHEETS -->
